# background-worker-example

./: .gitignore  BackgroundGenerator.cs  BackgroundWorkerDotnet.http  MODULE.bazel  Program.cs  WORKSPACE  paket.dependencies  paket.main.bzl
Properties/: launchSettings.json
src/: BUILD.bazel  BackgroundGenerator.cs  BackgroundWorkerDotnet.sln  Program.cs
